--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,27 +1,24 @@
-name: Makefile CI
+name: Build and Test
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    - name: configure
-      run: ./configure
+    - name: Set up C++ environment
+      uses: actions/setup-cpp@v2
+      with:
+        compiler: 'g++'
 
-    - name: Install dependencies
-      run: make
-
-    - name: Run check
-      run: make check
-
-    - name: Run distcheck
-      run: make distcheck
+    - name: Build and test
+      run: |
+        make
+        ./build/zengon
